--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,32 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 
 # Opsi: Tambahkan testing (jika ada test)
 enable_testing()
+
+cmake_minimum_required(VERSION 3.14)
+project(UnitConverter VERSION 1.0 LANGUAGES CXX)
+
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Include FetchContent untuk download library
+include(FetchContent)
+
+# Download nlohmann/json
+FetchContent_Declare(
+    json
+    GIT_REPOSITORY https://github.com/nlohmann/json.git
+    GIT_TAG v3.11.2
+)
+FetchContent_MakeAvailable(json)
+
+include_directories(${CMAKE_SOURCE_DIR}/include)
+
+file(GLOB SOURCES "src/*.cpp")
+add_executable(${PROJECT_NAME} ${SOURCES})
+
+# Link library JSON
+target_link_libraries(${PROJECT_NAME} nlohmann_json::nlohmann_json)
+
+set_target_properties(${PROJECT_NAME} PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+)
